--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 trabajamos juntos para crear piezas que sean tanto un reflejo de nuestra experiencia como del espíritu único de quien las lleva.
                 Nuestro objetivo es que cada tatuaje no solo sea una obra de arte, sino también una experiencia significativa y memorable.</p>
               <audio controls >
-                <source src="/img/KANA-BOON - Silhouette.mp3" type="audio/mpeg">
+                <source src="img/KANA-BOON - Silhouette.mp3" type="audio/mpeg">
               </audio>
              
             </div>
