--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               </div>
             </div>
             <div class="right">
-              <a href="/FormInformation.html">
+              <a href="FormInformation.html">
                 <i class="fa fa-inbox" style="border-radius: 10px;"></i>
               </a>              
               <i class="fa fa-facebook" style="border-radius: 10px;"></i>
